[radv] Crypt not rendering properly
Description
I notice two problems with the game, the lantern in the main menu sometimes has a green outline which I don't think should be there at all. And that after starting the game, it doesn't render properly.
The game is free and only a few hundred megabytes https://store.steampowered.com/app/2138700/Crypt/
Screenshots/video files
This is RADV
This is RADV with zerovram (better but still has many issues)
This is radeonsi (using wined3d instead of dxvk)
Steps to reproduce
Start game, select play and wait a few seconds for the "instructions" to go away.
System information
Host: FrogBlue Kernel: 5.19.14-270-tkg-pds arch: x86_64 bits: 64
compiler: gcc v: 12.2.0 Desktop: KDE Plasma v: 5.26.1 tk: Qt v: 5.15.6
wm: kwin_x11 dm: 1: LightDM note: stopped 2: SDDM Distro: Arch Linux
CPU:
Info: 6-core model: AMD Ryzen 5 5600G with Radeon Graphics bits: 64
type: MT MCP arch: Zen 3 rev: 0 cache: L1: 384 KiB L2: 3 MiB L3: 16 MiB
Speed (MHz): avg: 2995 high: 2997 min/max: 400/4464 cores: 1: 2994
2: 2994 3: 2997 4: 2995 5: 2995 6: 2995 7: 2995 8: 2994 9: 2997 10: 2997
11: 2994 12: 2994 bogomips: 93525
Flags: avx avx2 ht lm nx pae sse sse2 sse3 sse4_1 sse4_2 sse4a ssse3 svm
Graphics:
Device-1: AMD Tonga XT / Amethyst [Radeon R9 380X M295X] vendor: Gigabyte
driver: amdgpu v: kernel arch: GCN-3 pcie: speed: 8 GT/s lanes: 16 ports:
active: DVI-I-1 empty: DP-1,DVI-D-1,HDMI-A-1 bus-ID: 01:00.0
chip-ID: 1002:6938 temp: 57.0 C
Display: x11 server: X.Org v: 21.1.4 with: Xwayland v: 22.1.4
compositor: kwin_x11 driver: X: loaded: amdgpu
unloaded: fbdev,modesetting,vesa dri: radeonsi gpu: amdgpu display-ID: :0
screens: 1
Screen-1: 0 s-res: 1680x1050 s-dpi: 96
Monitor-1: DVI-I-1 model: LG (GoldStar) TV res: 1680x1050 dpi: 90
diag: 558mm (22")
OpenGL: renderer: AMD Radeon R9 380 Series (tonga LLVM 14.0.6 DRM 3.47
5.19.14-270-tkg-pds) v: 4.6 Mesa 22.2.0-devel (git-6d145df51f)
direct render: Yes
Note: I tried with both mesa-git and mesa 22.2 with no visible changes.
If applicable
- Xserver version: 1.21.1.4
- Wine/Proton version:6.3/7/experimental
Further information (optional)
Another user tried with Nvidia proprietary drivers as well as ANV and the game rendered fine with both.